--- a/app/views/links/new.erb
+++ b/app/views/links/new.erb
@@ -3,6 +3,6 @@
 <form method="post" action="/links">
 <input type="text" name="url" placeholder="Enter URL">
 <input type="text" name="title" placeholder="Enter Title">
-<button type="submit" value="Create link">
+<button type="submit" value="Create link">Create Link!</button>
 </form>
 
