--- a/app/views/links/new.erb
+++ b/app/views/links/new.erb
@@ -3,7 +3,7 @@
 <form method="post" action="/links">
 <input type="text" name="url" placeholder="Enter URL">
 <input type="text" name="title" placeholder="Enter Title">
-<input type="text" name="tag" placeholder="Enter Tag">
+<input type="text" name="tags" placeholder="Enter Tag">
 <button type="submit" value="Create link">Create Link!</button>
 </form>
 
